--- a/AUSfp/Properties/Resources.resx
+++ b/AUSfp/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Teams-48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Teams-48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Teams-24x24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Teams-24x24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
